fix: gjd overflow, modal spasi ae wes, dahlah

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@
     background-color: var(--bg);
     color: var(--secondary);
     /* min-height: 3000px; */
-    overflow: hidden;
   }
   
 
